archive/applications/backbone/tailscale/tailscale/saubian.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: saubian.goby-beaufort.ts.net
  name: saubian
  namespace: tailscale
spec:
  externalName: placeholder # any value - will be overwritten by operator
  type: ExternalName
