archive/applications/backbone/tailscale/tailscale/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: saubian
  namespace: tailscale
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "saubian.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: saubian-tailscale-service
      namespace: tailscale
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
